packages/tree-sitter-popcorn/test/corpus/hierarchy.txt
================================================================================
Simple child rule
================================================================================

#parent {
  type: group;

  > #child {
    type: circle;
    r: 20px;
  }
}

--------------------------------------------------------------------------------

(stylesheet
  (rule
    (selector
      (id_selector
        (identifier)))
    (block
      (declaration
        (property
          (identifier))
        (keyword
          (identifier)))
      (child_rule
        (rule
          (selector
            (id_selector
              (identifier)))
          (block
            (declaration
              (property
                (identifier))
              (keyword
                (identifier)))
            (declaration
              (property
                (identifier))
              (dimension
                (unit)))))))))

================================================================================
Deeply nested hierarchy
================================================================================

#root {
  type: group;

  > #level1 {
    type: group;

    > #level2 {
      type: circle;
      r: 10px;
    }
  }
}

--------------------------------------------------------------------------------

(stylesheet
  (rule
    (selector
      (id_selector
        (identifier)))
    (block
      (declaration
        (property
          (identifier))
        (keyword
          (identifier)))
      (child_rule
        (rule
          (selector
            (id_selector
              (identifier)))
          (block
            (declaration
              (property
                (identifier))
              (keyword
                (identifier)))
            (child_rule
              (rule
                (selector
                  (id_selector
                    (identifier)))
                (block
                  (declaration
                    (property
                      (identifier))
                    (keyword
                      (identifier)))
                  (declaration
                    (property
                      (identifier))
                    (dimension
                      (unit))))))))))))

================================================================================
Multiple children
================================================================================

#container {
  type: group;

  > #first {
    fill: #ff0000;
  }

  > #second {
    fill: #00ff00;
  }
}

--------------------------------------------------------------------------------

(stylesheet
  (rule
    (selector
      (id_selector
        (identifier)))
    (block
      (declaration
        (property
          (identifier))
        (keyword
          (identifier)))
      (child_rule
        (rule
          (selector
            (id_selector
              (identifier)))
          (block
            (declaration
              (property
                (identifier))
              (color)))))
      (child_rule
        (rule
          (selector
            (id_selector
              (identifier)))
          (block
            (declaration
              (property
                (identifier))
              (color))))))))
