packages/tree-sitter-popcorn/test/corpus/pseudo-classes.txt
================================================================================
Hover pseudo-class
================================================================================

#button {
  type: rect;
  fill: #3498db;

  &:hover {
    fill: #2980b9;
  }
}

--------------------------------------------------------------------------------

(stylesheet
  (rule
    (selector
      (id_selector
        (identifier)))
    (block
      (declaration
        (property
          (identifier))
        (keyword
          (identifier)))
      (declaration
        (property
          (identifier))
        (color))
      (pseudo_rule
        (pseudo_selector
          (hover_pseudo))
        (declaration_block
          (declaration
            (property
              (identifier))
            (color)))))))

================================================================================
Active pseudo-class
================================================================================

#button {
  type: rect;
  fill: #3498db;

  &:active {
    fill: #1a5276;
  }
}

--------------------------------------------------------------------------------

(stylesheet
  (rule
    (selector
      (id_selector
        (identifier)))
    (block
      (declaration
        (property
          (identifier))
        (keyword
          (identifier)))
      (declaration
        (property
          (identifier))
        (color))
      (pseudo_rule
        (pseudo_selector
          (active_pseudo))
        (declaration_block
          (declaration
            (property
              (identifier))
            (color)))))))

================================================================================
Both hover and active pseudo-classes
================================================================================

#button {
  type: rect;
  fill: #3498db;

  &:hover {
    fill: #2980b9;
    transform: scale(1.05);
  }

  &:active {
    fill: #1a5276;
    transform: scale(0.95);
  }
}

--------------------------------------------------------------------------------

(stylesheet
  (rule
    (selector
      (id_selector
        (identifier)))
    (block
      (declaration
        (property
          (identifier))
        (keyword
          (identifier)))
      (declaration
        (property
          (identifier))
        (color))
      (pseudo_rule
        (pseudo_selector
          (hover_pseudo))
        (declaration_block
          (declaration
            (property
              (identifier))
            (color))
          (declaration
            (property
              (identifier))
            (function_call
              (identifier)
              (arguments
                (number))))))
      (pseudo_rule
        (pseudo_selector
          (active_pseudo))
        (declaration_block
          (declaration
            (property
              (identifier))
            (color))
          (declaration
            (property
              (identifier))
            (function_call
              (identifier)
              (arguments
                (number)))))))))

================================================================================
Pseudo-class with child rules
================================================================================

#container {
  type: group;

  > #button {
    type: rect;
    fill: #3498db;

    &:hover {
      fill: #2980b9;
    }
  }
}

--------------------------------------------------------------------------------

(stylesheet
  (rule
    (selector
      (id_selector
        (identifier)))
    (block
      (declaration
        (property
          (identifier))
        (keyword
          (identifier)))
      (child_rule
        (rule
          (selector
            (id_selector
              (identifier)))
          (block
            (declaration
              (property
                (identifier))
              (keyword
                (identifier)))
            (declaration
              (property
                (identifier))
              (color))
            (pseudo_rule
              (pseudo_selector
                (hover_pseudo))
              (declaration_block
                (declaration
                  (property
                    (identifier))
                  (color))))))))))
